Excludes date_time and Boost libs
Excludes `date_time.cpp` and specific Boost libraries.
The rationale for this change is not evident from the diff itself,
but it appears to be part of a broader effort to reduce
dependencies or exclude features from the `misc_lib`.

--- a/src/misc_lib/CMakeLists.txt
+++ b/src/misc_lib/CMakeLists.txt
@@ -1,6 +1,9 @@
 include(GenerateExportHeader)
 
-add_library(misc_lib SHARED date_time.cpp time.cpp)
+add_library(
+  misc_lib SHARED
+  # date_time.cpp
+  time.cpp)
 
 add_library(Clock::misc_lib ALIAS misc_lib)
 
@@ -9,9 +12,10 @@ target_link_libraries(misc_lib PRIVATE Clock_options Clock_warnings)
 target_link_libraries(
   misc_lib
   PUBLIC Boost::date_time
-         Boost::multiprecision
-         Boost::json
-         Boost::uuid)
+  #  Boost::multiprecision
+  #  Boost::json
+  #  Boost::uuid
+)
 
 target_include_directories(
   misc_lib ${WARNING_GUARD}
