Links Boost multiprecision to misc_lib
Adds Boost::multiprecision to the list of public
libraries linked to misc_lib. This enables the use of
multiprecision arithmetic within the misc_lib library.

--- a/src/misc_lib/CMakeLists.txt
+++ b/src/misc_lib/CMakeLists.txt
@@ -10,11 +10,8 @@ add_library(Clock::misc_lib ALIAS misc_lib)
 target_link_libraries(misc_lib PRIVATE Clock_options Clock_warnings)
 
 target_link_libraries(
-  misc_lib
-  PUBLIC Boost::date_time
-  #  Boost::multiprecision
-  #  Boost::json
-  #  Boost::uuid
+  misc_lib PUBLIC Boost::date_time Boost::multiprecision #  Boost::json
+                                                         #  Boost::uuid
 )
 
 target_include_directories(
