Add Boost atomic library dependency to misc_lib

--- a/src/misc_lib/CMakeLists.txt
+++ b/src/misc_lib/CMakeLists.txt
@@ -14,7 +14,8 @@ target_link_libraries(
   PUBLIC Boost::date_time
          Boost::multiprecision
          Boost::json
-         Boost::uuid)
+         Boost::uuid
+         Boost::atomic)
 
 target_include_directories(
   misc_lib ${WARNING_GUARD}
