Refactor dependencies: update fmt library target and remove Boost UUID and Atomic from includes

--- a/src/misc_lib/CMakeLists.txt
+++ b/src/misc_lib/CMakeLists.txt
@@ -14,8 +14,7 @@ target_link_libraries(
   PUBLIC Boost::date_time
          Boost::multiprecision
          Boost::json
-         Boost::uuid
-         Boost::atomic)
+         fmt::fmt)
 
 target_include_directories(
   misc_lib ${WARNING_GUARD}
