Change Weekday enum and function declarations to remove MISC_LIB_EXPORT specifier; update CMakeLists.txt to define misc_lib as STATIC

--- a/src/misc_lib/CMakeLists.txt
+++ b/src/misc_lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 include(GenerateExportHeader)
 
-add_library(misc_lib SHARED date_time.cpp time.cpp)
+add_library(misc_lib STATIC date_time.cpp time.cpp)
 
 add_library(Clock::misc_lib ALIAS misc_lib)
 
