--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -269,11 +269,11 @@ jobs:
           ctest -C ${{matrix.build_type}} --rerun-failed --output-on-failure
           gcovr -j ${{env.nproc}} --root ../ --print-summary --xml-pretty --xml coverage.xml . --gcov-executable '${{ matrix.gcov_executable }}'
 
-      - name: Windows - Test and coverage
-        if: runner.os == 'Windows'
-        working-directory: ./build
-        run: |
-          OpenCppCoverage.exe --export_type cobertura:coverage.xml --cover_children -- ctest -C ${{matrix.build_type}} --rerun-failed --output-on-failure
+      # - name: Windows - Test and coverage
+      #   if: runner.os == 'Windows'
+      #   working-directory: ./build
+      #   run: |
+      #     OpenCppCoverage.exe --export_type cobertura:coverage.xml --cover_children -- ctest -C ${{matrix.build_type}} --rerun-failed --output-on-failure
 
       - name: CPack
         if: matrix.package_generator != ''
