Change Boost::json dependency to use PUBLIC_INCLUDES and updated naming to boost_json

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,8 +149,8 @@ clock_package_project(
   si3sim
   Clock_options
   Clock_warnings
-  PUBLIC_DEPENDENCIES
-  Boost::json
+  PUBLIC_INCLUDES
+  boost_json
   # FIXME: this does not work! CK
   # PRIVATE_DEPENDENCIES_CONFIGURED project_options project_warnings
 )
