--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,7 +134,7 @@ if(MSVC)
 endif()
 
 # set the startup project for the "play" button in MSVC
-set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT intro)
+# set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT si3sim)
 
 if(CMAKE_SKIP_INSTALL_RULES)
   return()
@@ -146,7 +146,7 @@ include(cmake/PackageProject.cmake)
 # we know we want to ship
 clock_package_project(
   TARGETS
-  intro
+  si3sim
   Clock_options
   Clock_warnings
   # FIXME: this does not work! CK
