Enhance static analysis configuration and clean up code structure
- Added clang-analyzer-core checks to .clang-tidy
- Removed unnecessary dependency checks in Dependencies.cmake
- Updated clang-tidy options to disable header analysis
- Refactored si3_sim.hpp to declare functions instead of defining them
- Added si3_sim.cpp with implementations for Si3Sim methods
- Adjusted CMakeLists.txt files to reflect changes in source files and removed clang-tidy calls

--- a/src/si3_sim/CMakeLists.txt
+++ b/src/si3_sim/CMakeLists.txt
@@ -1,20 +1,17 @@
 add_executable(si3sim main.cpp)
 
-target_sources(si3sim PRIVATE config.cpp)
+target_sources(si3sim PRIVATE si3_sim.cpp config.cpp)
 
 target_link_libraries(si3sim PRIVATE Clock::Clock_options Clock::Clock_warnings)
 
 target_link_system_libraries(
   si3sim
-  PUBLIC
+  PRIVATE
   CLI11::CLI11
   fmt::fmt
   spdlog::spdlog
-  lefticus::tools
   Boost::json
   Clock::misc_lib)
 
 target_include_directories(
   si3sim PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")
-
-clock_enable_clang_tidy(si3sim ${Clock_WARNINGS_AS_ERRORS})
