Refactor date_time and si3_sim modules; implement destructor for Si3Sim and enhance CMake configuration

--- a/src/misc_lib/CMakeLists.txt
+++ b/src/misc_lib/CMakeLists.txt
@@ -1,6 +1,11 @@
 include(GenerateExportHeader)
 
-add_library(misc_lib STATIC date_time.cpp time.cpp)
+add_library(
+  misc_lib STATIC
+  date_time.cpp
+  time.cpp
+  quad.cpp
+  run_record.cpp)
 
 add_library(Clock::misc_lib ALIAS misc_lib)
 
