--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,35 +7,79 @@ on:
   pull_request:
     branches: [ main ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   PRESET: unixlike-clang-release-docs
 
 jobs:
   build:
+    strategy:
+      fail-fast: false
+      matrix:
+        compiler:
+          - llvm-19.1.1
+        generator:
+          - "Ninja Multi-Config"
+        build_type:
+          - Release
+        packaging_maintainer_mode:
+          - ON
+
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v5
       with:
         # we want to find git tags to pass version to doxygen
         fetch-depth: 0
+
+    - name: Setup Cache
+      uses: ./.github/actions/setup_cache
+      with:
+        compiler: ${{ matrix.compiler }}
+        build_type: ${{ matrix.build_type }}
+        packaging_maintainer_mode: ${{ matrix.packaging_maintainer_mode }}
+        generator: ${{ matrix.generator }}
+
+    - name: Project Name
+      uses: cardinalby/export-env-action@v2
+      with:
+        envFile: '.github/constants.env'
+
+    - name: Setup Cpp
+      uses: aminya/setup-cpp@v1
+      with:
+        compiler: ${{ matrix.compiler }}
+        vcvarsall: ${{ contains(matrix.os, 'windows' )}}
+
+        cmake: true
+        ninja: true
+        vcpkg: false
+        ccache: true
+        clangtidy: false
+
+        cppcheck: false
+
+        gcovr: false
+        opencppcoverage: false
 
     - name: Install quetzal and Doxygen dependencies
       run: sudo apt-get install -y --no-install-recommends libboost-all-dev libgdal-dev doxygen graphviz
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build --preset=${{env.PRESET}}
+      run: |
+        cmake -S . -B ./build -G "${{matrix.generator}}" -DCMAKE_BUILD_TYPE:STRING=${{matrix.build_type}} -D${{ env.PROJECT_NAME }}_PACKAGING_MAINTAINER_MODE:BOOL=${{matrix.packaging_maintainer_mode}} -D${{ env.PROJECT_NAME }}_ENABLE_DOCUMENTATION:BOOL=ON
 
     - name: Generate documentation
-      working-directory: ${{github.workspace}}/build
-      # this is defined in the repo docs/CMakeLists.txt file
-      run: cmake --build . --target doxygen-docs 
+      run: |
+        cmake --build ./build --config ${{matrix.build_type}}
 
     - name: Moving Files
       run: |
