Add include-what-you-use option and enhance documentation across multiple files
- Introduced Clock_ENABLE_IWYU option in ProjectOptions.cmake for better include management.
- Enhanced documentation in date_time.hpp, quad.hpp, run_record.hpp, time.hpp, config.hpp, si3_sim.hpp, and their respective implementation files.
- Improved function signatures and added detailed descriptions for clarity.
- Refactored validation logic in Config class for measurement events.

--- a/src/misc_lib/CMakeLists.txt
+++ b/src/misc_lib/CMakeLists.txt
@@ -20,6 +20,9 @@ target_link_system_libraries(
   fmt::fmt)
 
 target_include_directories(
+  misc_lib PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")
+
+target_include_directories(
   misc_lib ${WARNING_GUARD}
   PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
          $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>)
