Removed macOS gcc-14 from CI configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,10 @@ jobs:
             compiler: llvm-19.1.1
             packaging_maintainer_mode: Off
 
+          # macos xcode gcc is clang
+          - os: macos-latest
+            compiler: gcc-14
+
         include:
           # Add appropriate variables for gcov version required. This will intentionally break
           # if you try to use a compiler that does not have gcov set
